--- a/Sol_ME_Predict.ipynb
+++ b/Sol_ME_Predict.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMIUtFWIApVV3Ea7WEn8xHO",
+      "authorship_tag": "ABX9TyPkOu0/LQH4mCSfxh8/r617",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -456,6 +456,93 @@
       "metadata": {
         "id": "QDmic4xdvS42"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title Without any Error - SMILE\n",
+        "#%%capture\n",
+        "!pip install pubchempy\n",
+        "!pip install padelpy\n",
+        "from padelpy import from_smiles\n",
+        "import tensorflow as tf\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import io\n",
+        "from tensorflow import keras\n",
+        "import pubchempy as pcp\n",
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "from keras.models import load_model\n",
+        "import time as tm\n",
+        "from google_drive_downloader import GoogleDriveDownloader as gdd\n",
+        "gdd.download_file_from_google_drive(file_id='1TdaGJou2sS3_FgW5oxLEDUiKIyfjsQ83',\n",
+        "                                   dest_path='/content/sample_data/Sol_ME.hdf5',\n",
+        "                                   unzip=False)\n",
+        "#Load Model\n",
+        "model = load_model('/content/sample_data/Sol_ME.hdf5', compile=True)\n",
+        "\n",
+        "# Load input data from Excel\n",
+        "input_file_path = 'path_to_your_excel_file.xlsx'\n",
+        "data = pd.read_excel(input_file_path)\n",
+        "\n",
+        "# Preprocess the data\n",
+        "def preprocess_data(row):\n",
+        "    try:\n",
+        "        Drug_SMILE = row['Drug_SMILE']\n",
+        "        Excipient_SMILE = row['Excipient_SMILE']\n",
+        "        LogP_of_Drug = row['LogP_of_Drug'] / 100\n",
+        "        LogP_of_Excipient = row['LogP_of_Excipient'] / 100\n",
+        "        MolWt_of_Drug = row['MolWt_of_Drug'] / 1000\n",
+        "        MolWt_of_Excipient = row['MolWt_of_Excipient'] / 1000\n",
+        "\n",
+        "        CID_D = from_smiles(Drug_SMILE, fingerprints=True, descriptors=False)\n",
+        "        CID_E = from_smiles(Excipient_SMILE, fingerprints=True, descriptors=False)\n",
+        "\n",
+        "        FPD = list(CID_D.values())\n",
+        "        FPE = list(CID_E.values())\n",
+        "\n",
+        "        List1 = [MolWt_of_Drug, MolWt_of_Excipient, LogP_of_Drug, LogP_of_Excipient]\n",
+        "\n",
+        "        List2 = list(FPD)\n",
+        "        List3 = list(FPE)\n",
+        "        List = List1 + List2 + List3\n",
+        "\n",
+        "        return List, None\n",
+        "    except Exception as e:\n",
+        "        return None, str(e)\n",
+        "\n",
+        "results = []\n",
+        "\n",
+        "for index, row in data.iterrows():\n",
+        "    preprocessed_data, error = preprocess_data(row)\n",
+        "\n",
+        "    if preprocessed_data is not None:\n",
+        "        X_Predict = np.array(preprocessed_data)\n",
+        "        try:\n",
+        "            Y_prediction = model.predict(X_Predict.reshape(1, -1))\n",
+        "            results.append(Y_prediction[0][0])\n",
+        "        except Exception as e:\n",
+        "            results.append(f\"Error during prediction: {str(e)}\")\n",
+        "    else:\n",
+        "        results.append(f\"Error during data preprocessing: {error}\")\n",
+        "\n",
+        "# Add results to the DataFrame\n",
+        "data['Prediction'] = results\n",
+        "\n",
+        "# Save the results to an Excel file\n",
+        "output_file_path = 'results.xlsx'\n",
+        "data.to_excel(output_file_path, index=False)\n",
+        "\n",
+        "# Provide a download link for the user\n",
+        "from google.colab import files\n",
+        "files.download(output_file_path)\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "bMVGVGjIzFTI"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
