--- a/Sol_ME_Predict.ipynb
+++ b/Sol_ME_Predict.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPkOu0/LQH4mCSfxh8/r617",
+      "authorship_tag": "ABX9TyPYUcx+qH/oPuiKG4BAdIH8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +13,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "TPU"
   },
   "cells": [
     {
@@ -397,6 +398,9 @@
         "#Load Model\n",
         "model = load_model('/content/sample_data/Sol_ME.hdf5', compile=True)\n",
         "\n",
+        "from google.colab import files\n",
+        "uploaded = files.upload()\n",
+        "\n",
         "# Load input data from Excel\n",
         "input_file_path = '/content/Predict_SMILE.xlsx'\n",
         "data = pd.read_excel(input_file_path)\n",
@@ -443,10 +447,35 @@
       ],
       "metadata": {
         "cellView": "form",
-        "id": "W9TNj4FXp9EO"
+        "id": "W9TNj4FXp9EO",
+        "outputId": "72110584-66cb-40e5-d2d7-dfea0f33e992",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting pubchempy\n",
+            "  Downloading PubChemPy-1.0.4.tar.gz (29 kB)\n",
+            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Building wheels for collected packages: pubchempy\n",
+            "  Building wheel for pubchempy (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for pubchempy: filename=PubChemPy-1.0.4-py3-none-any.whl size=13819 sha256=ff3c8abe4143cb43f0b88e2f1c176b024d1b505e2d87b80b8b6f0000e7db7e8b\n",
+            "  Stored in directory: /root/.cache/pip/wheels/90/7c/45/18a0671e3c3316966ef7ed9ad2b3f3300a7e41d3421a44e799\n",
+            "Successfully built pubchempy\n",
+            "Installing collected packages: pubchempy\n",
+            "Successfully installed pubchempy-1.0.4\n",
+            "Collecting padelpy\n",
+            "  Downloading padelpy-0.1.14-py2.py3-none-any.whl (20.9 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m20.9/20.9 MB\u001b[0m \u001b[31m42.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
