--- a/Sol_ME_Predict.ipynb
+++ b/Sol_ME_Predict.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPYUcx+qH/oPuiKG4BAdIH8",
+      "authorship_tag": "ABX9TyOZTa04YqRiTErOquar4PIj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -446,36 +446,10 @@
         "files.download(output_file_path)"
       ],
       "metadata": {
-        "cellView": "form",
-        "id": "W9TNj4FXp9EO",
-        "outputId": "72110584-66cb-40e5-d2d7-dfea0f33e992",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "W9TNj4FXp9EO"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting pubchempy\n",
-            "  Downloading PubChemPy-1.0.4.tar.gz (29 kB)\n",
-            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "Building wheels for collected packages: pubchempy\n",
-            "  Building wheel for pubchempy (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pubchempy: filename=PubChemPy-1.0.4-py3-none-any.whl size=13819 sha256=ff3c8abe4143cb43f0b88e2f1c176b024d1b505e2d87b80b8b6f0000e7db7e8b\n",
-            "  Stored in directory: /root/.cache/pip/wheels/90/7c/45/18a0671e3c3316966ef7ed9ad2b3f3300a7e41d3421a44e799\n",
-            "Successfully built pubchempy\n",
-            "Installing collected packages: pubchempy\n",
-            "Successfully installed pubchempy-1.0.4\n",
-            "Collecting padelpy\n",
-            "  Downloading padelpy-0.1.14-py2.py3-none-any.whl (20.9 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m20.9/20.9 MB\u001b[0m \u001b[31m42.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -569,6 +543,308 @@
       "metadata": {
         "cellView": "form",
         "id": "bMVGVGjIzFTI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title For Multiple SMILES Prediction upload Predict_SMILE.xlsx and (Shift + Enter)\n",
+        "\n",
+        "!pip install pubchempy\n",
+        "!pip install padelpy\n",
+        "from padelpy import from_smiles\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from keras.models import load_model\n",
+        "from concurrent.futures import ThreadPoolExecutor\n",
+        "\n",
+        "# Load Model\n",
+        "model = load_model('/content/sample_data/Sol_ME.hdf5', compile=True)\n",
+        "\n",
+        "from google.colab import files\n",
+        "uploaded = files.upload()\n",
+        "\n",
+        "# Load input data from Excel\n",
+        "input_file_path = '/content/Predict_SMILE.xlsx'\n",
+        "data = pd.read_excel(input_file_path)\n",
+        "\n",
+        "# Preprocess the data\n",
+        "def preprocess_data(row):\n",
+        "    Drug_SMILE = row['Drug_SMILE']\n",
+        "    Excipient_SMILE = row['Excipient_SMILE']\n",
+        "    LogP_of_Drug = row['LogP_of_Drug'] / 100\n",
+        "    LogP_of_Excipient = row['LogP_of_Excipient'] / 100\n",
+        "    MolWt_of_Drug = row['MolWt_of_Drug'] / 1000\n",
+        "    MolWt_of_Excipient = row['MolWt_of_Excipient'] / 1000\n",
+        "\n",
+        "    CID_D = from_smiles(Drug_SMILE, fingerprints=True, descriptors=False)\n",
+        "    CID_E = from_smiles(Excipient_SMILE, fingerprints=True, descriptors=False)\n",
+        "\n",
+        "    FPD = list(CID_D.values())\n",
+        "    FPE = list(CID_E.values())\n",
+        "\n",
+        "    List1 = [MolWt_of_Drug, MolWt_of_Excipient, LogP_of_Drug, LogP_of_Excipient]\n",
+        "\n",
+        "    List2 = list(FPD)\n",
+        "    List3 = list(FPE)\n",
+        "    List = List1 + List2 + List3\n",
+        "\n",
+        "    return List\n",
+        "\n",
+        "# Function to generate fingerprints for a chunk of data\n",
+        "def generate_fingerprints(data_chunk):\n",
+        "    return np.array([preprocess_data(row) for _, row in data_chunk.iterrows()])\n",
+        "\n",
+        "# Split data into chunks for parallel processing\n",
+        "chunk_size = 4756  # Adjust this value based on your available memory\n",
+        "data_chunks = [data[i:i+chunk_size] for i in range(0, len(data), chunk_size)]\n",
+        "\n",
+        "# Perform predictions using parallel processing\n",
+        "Y_predictions = []\n",
+        "with ThreadPoolExecutor() as executor:\n",
+        "    for chunk_predictions in executor.map(generate_fingerprints, data_chunks):\n",
+        "        Y_prediction = model.predict(chunk_predictions)\n",
+        "        Y_predictions.extend(Y_prediction)\n",
+        "\n",
+        "# Add predictions to the DataFrame\n",
+        "data['Prediction'] = Y_predictions\n",
+        "\n",
+        "# Save the results to an Excel file\n",
+        "output_file_path = 'Predict_SMILE_Result.xlsx'\n",
+        "data.to_excel(output_file_path, index=False)\n",
+        "\n",
+        "# Provide a download link for the user\n",
+        "from google.colab import files\n",
+        "files.download(output_file_path)\n"
+      ],
+      "metadata": {
+        "id": "MWwwuuOS47Fm",
+        "outputId": "c31fb7c9-35ee-4a14-b3f2-643501f3a89b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 110
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: pubchempy in /usr/local/lib/python3.10/dist-packages (1.0.4)\n",
+            "Requirement already satisfied: padelpy in /usr/local/lib/python3.10/dist-packages (0.1.14)\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "     <input type=\"file\" id=\"files-ac51b610-db31-47b7-86a9-935737e686c4\" name=\"files[]\" multiple disabled\n",
+              "        style=\"border:none\" />\n",
+              "     <output id=\"result-ac51b610-db31-47b7-86a9-935737e686c4\">\n",
+              "      Upload widget is only available when the cell has been executed in the\n",
+              "      current browser session. Please rerun this cell to enable.\n",
+              "      </output>\n",
+              "      <script>// Copyright 2017 Google LLC\n",
+              "//\n",
+              "// Licensed under the Apache License, Version 2.0 (the \"License\");\n",
+              "// you may not use this file except in compliance with the License.\n",
+              "// You may obtain a copy of the License at\n",
+              "//\n",
+              "//      http://www.apache.org/licenses/LICENSE-2.0\n",
+              "//\n",
+              "// Unless required by applicable law or agreed to in writing, software\n",
+              "// distributed under the License is distributed on an \"AS IS\" BASIS,\n",
+              "// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
+              "// See the License for the specific language governing permissions and\n",
+              "// limitations under the License.\n",
+              "\n",
+              "/**\n",
+              " * @fileoverview Helpers for google.colab Python module.\n",
+              " */\n",
+              "(function(scope) {\n",
+              "function span(text, styleAttributes = {}) {\n",
+              "  const element = document.createElement('span');\n",
+              "  element.textContent = text;\n",
+              "  for (const key of Object.keys(styleAttributes)) {\n",
+              "    element.style[key] = styleAttributes[key];\n",
+              "  }\n",
+              "  return element;\n",
+              "}\n",
+              "\n",
+              "// Max number of bytes which will be uploaded at a time.\n",
+              "const MAX_PAYLOAD_SIZE = 100 * 1024;\n",
+              "\n",
+              "function _uploadFiles(inputId, outputId) {\n",
+              "  const steps = uploadFilesStep(inputId, outputId);\n",
+              "  const outputElement = document.getElementById(outputId);\n",
+              "  // Cache steps on the outputElement to make it available for the next call\n",
+              "  // to uploadFilesContinue from Python.\n",
+              "  outputElement.steps = steps;\n",
+              "\n",
+              "  return _uploadFilesContinue(outputId);\n",
+              "}\n",
+              "\n",
+              "// This is roughly an async generator (not supported in the browser yet),\n",
+              "// where there are multiple asynchronous steps and the Python side is going\n",
+              "// to poll for completion of each step.\n",
+              "// This uses a Promise to block the python side on completion of each step,\n",
+              "// then passes the result of the previous step as the input to the next step.\n",
+              "function _uploadFilesContinue(outputId) {\n",
+              "  const outputElement = document.getElementById(outputId);\n",
+              "  const steps = outputElement.steps;\n",
+              "\n",
+              "  const next = steps.next(outputElement.lastPromiseValue);\n",
+              "  return Promise.resolve(next.value.promise).then((value) => {\n",
+              "    // Cache the last promise value to make it available to the next\n",
+              "    // step of the generator.\n",
+              "    outputElement.lastPromiseValue = value;\n",
+              "    return next.value.response;\n",
+              "  });\n",
+              "}\n",
+              "\n",
+              "/**\n",
+              " * Generator function which is called between each async step of the upload\n",
+              " * process.\n",
+              " * @param {string} inputId Element ID of the input file picker element.\n",
+              " * @param {string} outputId Element ID of the output display.\n",
+              " * @return {!Iterable<!Object>} Iterable of next steps.\n",
+              " */\n",
+              "function* uploadFilesStep(inputId, outputId) {\n",
+              "  const inputElement = document.getElementById(inputId);\n",
+              "  inputElement.disabled = false;\n",
+              "\n",
+              "  const outputElement = document.getElementById(outputId);\n",
+              "  outputElement.innerHTML = '';\n",
+              "\n",
+              "  const pickedPromise = new Promise((resolve) => {\n",
+              "    inputElement.addEventListener('change', (e) => {\n",
+              "      resolve(e.target.files);\n",
+              "    });\n",
+              "  });\n",
+              "\n",
+              "  const cancel = document.createElement('button');\n",
+              "  inputElement.parentElement.appendChild(cancel);\n",
+              "  cancel.textContent = 'Cancel upload';\n",
+              "  const cancelPromise = new Promise((resolve) => {\n",
+              "    cancel.onclick = () => {\n",
+              "      resolve(null);\n",
+              "    };\n",
+              "  });\n",
+              "\n",
+              "  // Wait for the user to pick the files.\n",
+              "  const files = yield {\n",
+              "    promise: Promise.race([pickedPromise, cancelPromise]),\n",
+              "    response: {\n",
+              "      action: 'starting',\n",
+              "    }\n",
+              "  };\n",
+              "\n",
+              "  cancel.remove();\n",
+              "\n",
+              "  // Disable the input element since further picks are not allowed.\n",
+              "  inputElement.disabled = true;\n",
+              "\n",
+              "  if (!files) {\n",
+              "    return {\n",
+              "      response: {\n",
+              "        action: 'complete',\n",
+              "      }\n",
+              "    };\n",
+              "  }\n",
+              "\n",
+              "  for (const file of files) {\n",
+              "    const li = document.createElement('li');\n",
+              "    li.append(span(file.name, {fontWeight: 'bold'}));\n",
+              "    li.append(span(\n",
+              "        `(${file.type || 'n/a'}) - ${file.size} bytes, ` +\n",
+              "        `last modified: ${\n",
+              "            file.lastModifiedDate ? file.lastModifiedDate.toLocaleDateString() :\n",
+              "                                    'n/a'} - `));\n",
+              "    const percent = span('0% done');\n",
+              "    li.appendChild(percent);\n",
+              "\n",
+              "    outputElement.appendChild(li);\n",
+              "\n",
+              "    const fileDataPromise = new Promise((resolve) => {\n",
+              "      const reader = new FileReader();\n",
+              "      reader.onload = (e) => {\n",
+              "        resolve(e.target.result);\n",
+              "      };\n",
+              "      reader.readAsArrayBuffer(file);\n",
+              "    });\n",
+              "    // Wait for the data to be ready.\n",
+              "    let fileData = yield {\n",
+              "      promise: fileDataPromise,\n",
+              "      response: {\n",
+              "        action: 'continue',\n",
+              "      }\n",
+              "    };\n",
+              "\n",
+              "    // Use a chunked sending to avoid message size limits. See b/62115660.\n",
+              "    let position = 0;\n",
+              "    do {\n",
+              "      const length = Math.min(fileData.byteLength - position, MAX_PAYLOAD_SIZE);\n",
+              "      const chunk = new Uint8Array(fileData, position, length);\n",
+              "      position += length;\n",
+              "\n",
+              "      const base64 = btoa(String.fromCharCode.apply(null, chunk));\n",
+              "      yield {\n",
+              "        response: {\n",
+              "          action: 'append',\n",
+              "          file: file.name,\n",
+              "          data: base64,\n",
+              "        },\n",
+              "      };\n",
+              "\n",
+              "      let percentDone = fileData.byteLength === 0 ?\n",
+              "          100 :\n",
+              "          Math.round((position / fileData.byteLength) * 100);\n",
+              "      percent.textContent = `${percentDone}% done`;\n",
+              "\n",
+              "    } while (position < fileData.byteLength);\n",
+              "  }\n",
+              "\n",
+              "  // All done.\n",
+              "  yield {\n",
+              "    response: {\n",
+              "      action: 'complete',\n",
+              "    }\n",
+              "  };\n",
+              "}\n",
+              "\n",
+              "scope.google = scope.google || {};\n",
+              "scope.google.colab = scope.google.colab || {};\n",
+              "scope.google.colab._files = {\n",
+              "  _uploadFiles,\n",
+              "  _uploadFilesContinue,\n",
+              "};\n",
+              "})(self);\n",
+              "</script> "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saving Predict_SMILE.xlsx to Predict_SMILE.xlsx\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "DN9xQjPt5pbi"
       },
       "execution_count": null,
       "outputs": []
