--- a/Sol_ME_Predict.ipynb
+++ b/Sol_ME_Predict.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPci3p3AT4sEFh0mvKOdubj",
+      "authorship_tag": "ABX9TyOIKWkRoxIN2Hg97HL0CBzv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
         "import time as tm\n",
         "from google_drive_downloader import GoogleDriveDownloader as gdd\n",
         "\n",
-        "gdd.download_file_from_google_drive(file_id='1TdaGJou2sS3_FgW5oxLEDUiKIyfjsQ83',\n",
+        "gdd.download_file_from_google_drive(file_id='19vWbg_CKrTmgTupKjVsNerZCQGo-gi0n',\n",
         "                                   dest_path='/content/sample_data/Sol_ME.hdf5',\n",
         "                                   unzip=False)\n",
         "#Load Model\n",
@@ -139,11 +139,11 @@
         "import time as tm\n",
         "from google_drive_downloader import GoogleDriveDownloader as gdd\n",
         "\n",
-        "gdd.download_file_from_google_drive(file_id='1TdaGJou2sS3_FgW5oxLEDUiKIyfjsQ83',\n",
+        "gdd.download_file_from_google_drive(file_id='19vWbg_CKrTmgTupKjVsNerZCQGo-gi0n',\n",
         "                                   dest_path='/content/sample_data/Sol_ME.hdf5',\n",
         "                                   unzip=False)\n",
         "#Load Model\n",
-        "model = load_model('/content/sample_data/Sol_ME.hdf5', compile= True)\n",
+        "model = load_model('/content/sample_data/Sol_ME.hdf5', compile= False)\n",
         "\n",
         "\n",
         "Drug_CID =  24872560#@param {type:\"number\"}\n",
@@ -219,7 +219,7 @@
         "from google.colab import files\n",
         "uploaded = files.upload()\n",
         "\n",
-        "gdd.download_file_from_google_drive(file_id='1-nyzDQCzvTqDKyu9j7iXCl_GNwJ6wrw1',\n",
+        "gdd.download_file_from_google_drive(file_id='19vWbg_CKrTmgTupKjVsNerZCQGo-gi0n',\n",
         "                                   dest_path='/content/sample_data/Sol_ME.hdf5',\n",
         "                                   unzip=False)\n",
         "#Load Model\n",
@@ -307,8 +307,8 @@
         "from keras.models import load_model\n",
         "import time as tm\n",
         "from google_drive_downloader import GoogleDriveDownloader as gdd\n",
-        "gdd.download_file_from_google_drive(file_id='1TdaGJou2sS3_FgW5oxLEDUiKIyfjsQ83',\n",
-        "                                   dest_path='/content/sample_data/Sol_ME.hdf5',\n",
+        "gdd.download_file_from_google_drive(file_id='19vWbg_CKrTmgTupKjVsNerZCQGo-gi0n',\n",
+        "                                   dest_path='/content/sample_data/SOLModel.hdf5',\n",
         "                                   unzip=False)\n",
         "#Load Model\n",
         "model = load_model('/content/sample_data/Sol_ME.hdf5', compile= True)\n",
@@ -386,7 +386,7 @@
         "from keras.models import load_model\n",
         "import time as tm\n",
         "from google_drive_downloader import GoogleDriveDownloader as gdd\n",
-        "gdd.download_file_from_google_drive(file_id='1TdaGJou2sS3_FgW5oxLEDUiKIyfjsQ83',\n",
+        "gdd.download_file_from_google_drive(file_id='19vWbg_CKrTmgTupKjVsNerZCQGo-gi0n',\n",
         "                                   dest_path='/content/sample_data/Sol_ME.hdf5',\n",
         "                                   unzip=False)\n",
         "#Load Model\n",
@@ -460,7 +460,7 @@
         "from concurrent.futures import ThreadPoolExecutor\n",
         "\n",
         "from google_drive_downloader import GoogleDriveDownloader as gdd\n",
-        "gdd.download_file_from_google_drive(file_id='1TdaGJou2sS3_FgW5oxLEDUiKIyfjsQ83',\n",
+        "gdd.download_file_from_google_drive(file_id='19vWbg_CKrTmgTupKjVsNerZCQGo-gi0n',\n",
         "                                   dest_path='/content/sample_data/Sol_ME.hdf5',\n",
         "                                   unzip=False)\n",
         "#Load Model\n",
