--- a/Sol_ME_Predict.ipynb
+++ b/Sol_ME_Predict.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOIKWkRoxIN2Hg97HL0CBzv",
+      "gpuType": "V28",
+      "authorship_tag": "ABX9TyMKq5jphhhTegltcRKiyeEg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,6 +53,7 @@
       "source": [
         "#@title #**OPTION : 1** - Insert PubChem CID of Drug and Carrier (Oil, Surfactant, Cosurfactant)\n",
         "!pip install pubchempy\n",
+        "!pip install googledrivedownloader\n",
         "import tensorflow as tf\n",
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -128,6 +130,7 @@
       "source": [
         "#@title #**OPTION : 2** - Insert PubChem CID of Drug and Carrier (Oil, Surfactant, Cosurfactant), LogP and Moleculr Weights\n",
         "!pip install pubchempy\n",
+        "!pip install googledrivedownloader\n",
         "import tensorflow as tf\n",
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -206,6 +209,7 @@
       "source": [
         "#@title #**OPTION : 3** - UPLOAD EXCEL (Predict.xlsx) for Multiple Prediction : For Downloading Predict.xlsx [CLICK HERE](https://github.com/Swayamprakashpatel/Sol_ME/raw/main/Predict.xlsx) - **Do not rename File Name**\n",
         "!pip install pubchempy\n",
+        "!pip install googledrivedownloader\n",
         "import tensorflow as tf\n",
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -296,6 +300,7 @@
         "#%%capture\n",
         "!pip install pubchempy\n",
         "!pip install padelpy\n",
+        "!pip install googledrivedownloader\n",
         "from padelpy import from_smiles\n",
         "import tensorflow as tf\n",
         "import pandas as pd\n",
@@ -375,6 +380,7 @@
         "\n",
         "!pip install pubchempy\n",
         "!pip install padelpy\n",
+        "!pip install googledrivedownloader\n",
         "from padelpy import from_smiles\n",
         "import tensorflow as tf\n",
         "import pandas as pd\n",
