--- a/Sol_ME_Predict.ipynb
+++ b/Sol_ME_Predict.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "V28",
-      "authorship_tag": "ABX9TyMKq5jphhhTegltcRKiyeEg",
+      "authorship_tag": "ABX9TyPKlKV9ItZCUl9sT7L+lrqb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,6 @@
       },
       "outputs": [],
       "source": [
-        "#@title #**OPTION : 1** - Insert PubChem CID of Drug and Carrier (Oil, Surfactant, Cosurfactant)\n",
         "!pip install pubchempy\n",
         "!pip install googledrivedownloader\n",
         "import tensorflow as tf\n",
@@ -68,61 +67,49 @@
         "gdd.download_file_from_google_drive(file_id='19vWbg_CKrTmgTupKjVsNerZCQGo-gi0n',\n",
         "                                   dest_path='/content/sample_data/Sol_ME.hdf5',\n",
         "                                   unzip=False)\n",
-        "#Load Model\n",
-        "model = load_model('/content/sample_data/Sol_ME.hdf5', compile= True)\n",
+        "# Load Model\n",
+        "model = load_model('/content/sample_data/Sol_ME.hdf5', compile=True)\n",
         "\n",
+        "# Drug and Excipient CID\n",
+        "Drug_CID = 24872560 #@param {type:\"number\"}\n",
+        "Excipient_CID = 331 #@param {type:\"number\"}\n",
         "\n",
-        "Drug_CID =  24872560#@param {type:\"number\"}\n",
-        "Excipient_CID =  121494022#@param {type:\"number\"}\n",
+        "# Fetch logP and Mol. Wt of Drug and Excipient\n",
+        "logp_D = pcp.Compound.from_cid(Drug_CID).xlogp\n",
+        "logp_C = pcp.Compound.from_cid(Excipient_CID).xlogp\n",
+        "Molwt_of_Drug = pcp.Compound.from_cid(Drug_CID).molecular_weight\n",
+        "Molwt_of_Excipient = pcp.Compound.from_cid(Excipient_CID).molecular_weight\n",
         "\n",
-        "#LOGP of DRUG AND CARRIER\n",
-        "logp_D = pcp.Compound.from_cid(Drug_CID)\n",
-        "logp_D = logp_D.xlogp\n",
-        "logp_D = float(logp_D)/100\n",
+        "# Check if any value is not available\n",
+        "if logp_D is None or logp_C is None or Molwt_of_Drug is None or Molwt_of_Excipient is None:\n",
+        "    print(\"USE OPTION - 2 [LOG P OR MOL. WT NOT AVAILABLE]\")\n",
+        "else:\n",
+        "    # Convert logP and Mol. Wt values to the required units\n",
+        "    logp_D = float(logp_D) / 100\n",
+        "    logp_C = float(logp_C) / 100\n",
+        "    Molwt_of_Drug = float(Molwt_of_Drug) / 1000\n",
+        "    Molwt_of_Excipient = float(Molwt_of_Excipient) / 1000\n",
         "\n",
-        "logp_C = pcp.Compound.from_cid(Excipient_CID)\n",
-        "logp_C = logp_C.xlogp\n",
-        "logp_C = float(logp_C)/100\n",
+        "    # Fetch Fingerprint of Drug and Carrier\n",
+        "    CID_D = pcp.Compound.from_cid(Drug_CID)\n",
+        "    CID_E = pcp.Compound.from_cid(Excipient_CID)\n",
+        "    FPD = CID_D.cactvs_fingerprint\n",
+        "    FPE = CID_E.cactvs_fingerprint\n",
         "\n",
-        "#Mol. Wt of Drug and Excipeint\n",
-        "Molwt_of_Drug = pcp.Compound.from_cid(Drug_CID)\n",
-        "Molwt_of_Drug = Molwt_of_Drug.molecular_weight\n",
-        "Molwt_of_Drug = float(Molwt_of_Drug)/1000\n",
+        "    # Combine all features into a single list\n",
+        "    List1 = [Molwt_of_Drug, Molwt_of_Excipient, logp_D, logp_C]\n",
+        "    List2 = list(FPD)\n",
+        "    List3 = list(FPE)\n",
+        "    List = List1 + List2 + List3\n",
         "\n",
-        "Molwt_of_Excipient = pcp.Compound.from_cid(Drug_CID)\n",
-        "Molwt_of_Excipient = Molwt_of_Excipient.molecular_weight\n",
-        "Molwt_of_Excipient = float(Molwt_of_Excipient)/1000\n",
+        "    # Convert to DataFrame and prepare for prediction\n",
+        "    t = pd.DataFrame(np.array(List).reshape(-1, len(List)))\n",
+        "    dataset1 = t.values\n",
+        "    X_Predict = (dataset1[:, 0:1766].astype(float))\n",
         "\n",
-        "#FINGERPRINT OF DRUG AND CARRIER\n",
-        "CID_D = pcp.Compound.from_cid(Drug_CID)\n",
-        "CID_E = pcp.Compound.from_cid(Excipient_CID)\n",
-        "\n",
-        "FPD = CID_D.cactvs_fingerprint\n",
-        "FPE = CID_E.cactvs_fingerprint\n",
-        "\n",
-        "List1 = [Molwt_of_Drug, Molwt_of_Excipient, logp_D, logp_C]\n",
-        "\n",
-        "List2 = list(FPD)\n",
-        "List3 = list(FPE)\n",
-        "List = List1 + List2 + List3\n",
-        "\n",
-        "\n",
-        "import pandas as pd\n",
-        "t = pd.DataFrame(np.array(List).reshape(-1,len(List)))\n",
-        "\n",
-        "#@title RUN FOR PREDICTION\n",
-        "\n",
-        "\n",
-        "dataset1 = t.values\n",
-        "t.dtype = int\n",
-        "X_Predict = (dataset1[:,0:1766].astype(float))\n",
-        "#print(X_Predict)\n",
-        "#print(X_Predict.shape)\n",
-        "#print(X_Predict.dtype)\n",
-        "\n",
-        "Y_prediction = model.predict(X_Predict)\n",
-        "\n",
-        "print(Y_prediction, \"mg/ml\")"
+        "    # Make prediction\n",
+        "    Y_prediction = model.predict(X_Predict)\n",
+        "    print(Y_prediction, \"mg/ml\")\n"
       ]
     },
     {
