--- a/Sol_ME_Predict.ipynb
+++ b/Sol_ME_Predict.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "V28",
-      "authorship_tag": "ABX9TyPKlKV9ItZCUl9sT7L+lrqb",
+      "authorship_tag": "ABX9TyOkwS60pBQ4kjaV2VrbTfSl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,12 +44,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "cellView": "form",
-        "id": "8DjqvLTnJB_3"
+        "id": "8DjqvLTnJB_3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fe761d96-39f3-43ee-886c-26192f7f5fe2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: pubchempy in /usr/local/lib/python3.10/dist-packages (1.0.4)\n",
+            "Requirement already satisfied: googledrivedownloader in /usr/local/lib/python3.10/dist-packages (0.4)\n",
+            "1/1 [==============================] - 0s 55ms/step\n",
+            "[[39.01761]] mg/ml\n"
+          ]
+        }
+      ],
       "source": [
         "!pip install pubchempy\n",
         "!pip install googledrivedownloader\n",
@@ -71,8 +86,8 @@
         "model = load_model('/content/sample_data/Sol_ME.hdf5', compile=True)\n",
         "\n",
         "# Drug and Excipient CID\n",
-        "Drug_CID = 24872560 #@param {type:\"number\"}\n",
-        "Excipient_CID = 331 #@param {type:\"number\"}\n",
+        "Drug_CID = 135398740 #@param {type:\"number\"}\n",
+        "Excipient_CID = 1030 #@param {type:\"number\"}\n",
         "\n",
         "# Fetch logP and Mol. Wt of Drug and Excipient\n",
         "logp_D = pcp.Compound.from_cid(Drug_CID).xlogp\n",
@@ -197,6 +212,7 @@
         "#@title #**OPTION : 3** - UPLOAD EXCEL (Predict.xlsx) for Multiple Prediction : For Downloading Predict.xlsx [CLICK HERE](https://github.com/Swayamprakashpatel/Sol_ME/raw/main/Predict.xlsx) - **Do not rename File Name**\n",
         "!pip install pubchempy\n",
         "!pip install googledrivedownloader\n",
+        "!pip install openpyxl\n",
         "import tensorflow as tf\n",
         "import pandas as pd\n",
         "import numpy as np\n",
